Colocando overflow-y no Aside
Quando o heigth da tela ficava muito pequeno a minha barra de finalização de compra não estava tendo rolagem..
E isso acabava sendo um problema em um mobile, por isso coloquei o overflow-y no Aside

--- a/assets/templat/templat.css
+++ b/assets/templat/templat.css
@@ -286,6 +286,7 @@ aside{
     display: none;
     width: 500px;
     transition: all 1s;
+    overflow-y: auto;
 }
 .container-aside{
     background-color: #889dc5;
