--- a/assets/templat/templat.css
+++ b/assets/templat/templat.css
@@ -146,6 +146,8 @@ nav{
     width: 100%;
     align-items: center;
     justify-content: center;
+   
+    
     
 }
 .box-choose{
@@ -287,11 +289,14 @@ aside{
     width: 500px;
     transition: all 1s;
     overflow-y: auto;
+    height: inherit;
 }
 .container-aside{
     background-color: #889dc5;
     width: 100%;
     padding: 0 20px;
+    height: inherit;
+    transition: all 1s;
 }
 .container-aside h2{
     margin: 20px 0px;
@@ -415,7 +420,11 @@ aside{
     aside{
         position: fixed;
         width: 100%;
-        height: 100vh;
+        height: 100%;
+        background-color: #889dc5;
+    }
+    .container-aside{
+        height: 100%;
     }
     #close-mob{
         display: block;
